# silero-vad-ncnn

./: .gitignore  README.md  compare.py  convert.py  main.py  requirements.txt
vad-cpp/: CMakeLists.txt  ncnn_vad.cpp  ncnn_vad.h  vad_example.cpp  wav_reader.hpp
vad/collections/: silero.py
vad/collections/resources/: silero.jit  silero.ncnn.param
vad/model/: silero.py
vad/model/nets/: silero.py
